# raylib_life

./: .clang-format  CMakeLists.txt  README.md  build.sh  run.sh
include/: raygui.h
src/: CMakeLists.txt  main.cpp
